gitops/manifests/workloads/dms/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-svc
  namespace: dms
  labels:
    app: paperless
spec:
  type: ClusterIP
  selector:
    app: paperless
  ports:
    - name: http
      port: 80
      targetPort: http
