gitops/manifests/workloads/dms/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: dms
spec:
  ingressClassName: nginx
  rules:
    - host: dms.dev.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  number: 80
